# PyTorchFire

./: .gitignore  README.md  WildTorchModel.py  fig6.py  fig7.py  generate_initial_v4.py  mkdocs.yml  pyproject.toml  requirements-examples.txt  requirements.txt  setup.py  test.ipynb  trainer.py  v4-exp-realfire.py  v4-test-exp.py  v4_exp_realfire.py  v4_exp_simulated.py
docs/: index.md  requirements.txt
docs/reference/: model.md  trainer.md  utils.md
examples/: README.txt  calbration.ipynb  calibration.ipynb  mpica.py  prediction.ipynb  real.py  simulated_fig.py  simulated_tbl.py  speedtest.py
examples/Bear_2020/: initial_ignition.npz  p_den.npz  p_veg.npz  target.npz  wind_towards_direction.npz  wind_velocity.npz
old/: extract_realfire_slice.py  tmp_fig6.py  v4_exp_realfire.py
pytorchfire/: __about__.py  __init__.py  model.py  trainer.py  utils.py
